[package]
name = "hashstar"
version = "0.1.0"
edition = "2021"
description = "A cross platform GUI application for quickly viewing the hashes of files"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cargo-bundle = "0.6.0"
clipboard = "0.5.0"
iced = "0.9.0"
md5 = "0.7.0"

[package.metadata.bundle]
name = "Hashstar"
identifier = "brad.app.hashstar"
icon = ["128x128.png"]
version = "1.0.0"
# resources = ["assets", "images/**/*.png", "secrets/public_key.txt"]
copyright = "Copyright (c) brabli 2023. All rights reserved."
category = "Developer Tool"
description = "Quickly generate checksums for files."
